--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 fastapi==0.111.0
 uvicorn==0.30.1
 python-multipart==0.0.9
+passlib[bcrypt]==1.7.4          # For password hashing
+bcrypt==3.2.0                   # Explicitly setting a compatible bcrypt version
+requests==2.32.3 
